--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mollie's Irish Pub</title>
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- ПРОСТОЕ РЕШЕНИЕ ДЛЯ ИКОНКИ -->
     <link rel="icon" href="assets/images/iconpub.png">
+    <link rel="apple-touch-icon" href="assets/images/iconpub.png">
+    <meta name="theme-color" content="#2d5016">
 </head>
-<body>
+    <body>
     <div class="container">
         <header>
             <img src="assets/images/iconpub.png" alt="Mollie's Irish Pub" class="logo">
