Update button labels to Push! and Stop

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="assets/images/leprikon1.jpg" alt="Lucky Leprechaun" 
                          class="leprechaun-img" id="leprechaun">
                     <div class="audio-controls">
-                        <button id="playBtn" class="music-btn">🎵 Play Music</button>
+                        <button id="playBtn" class="music-btn">🎵 Push</button>
                         <span id="trackInfo">I'm shipping Up to Boston - Dropkick Murphys</span>
                     </div>
                 </div>
