--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="icon" href="assets/images/iconpub.png">
     <link rel="apple-touch-icon" href="assets/images/iconpub.png">
     <meta name="theme-color" content="#2d5016">
+    <link rel="manifest" href="manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Mollie's Pub">
 </head>
 <body>
     <div class="container">
